[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hello"              # or a better name, but then update imports
version = "0.1.0"
description = "Hello package"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
